--- a/po/nl.po
+++ b/po/nl.po
@@ -788,7 +788,7 @@ msgstr "Item bewerken"
 
 #: data/ui/item_box.blp:73
 msgid "Remove item"
-msgstr "Item Verwijderen"
+msgstr "Item verwijderen"
 
 #: data/ui/preferences.blp:10
 msgid "General"
@@ -1131,7 +1131,7 @@ msgstr ""
 
 #: data/ui/window.blp:262
 msgid "Adjust"
-msgstr "Aanpassen"
+msgstr "Pas aan"
 
 #: data/ui/window.blp:277
 msgid "Shift"
@@ -1219,7 +1219,7 @@ msgstr "Voer aangepaste transformaties uit op de gegevens"
 
 #: data/ui/window.blp:456
 msgid "Modify"
-msgstr "Aanpassen"
+msgstr "Verplaats"
 
 #: data/ui/window.blp:477
 msgid "Translate X"
@@ -1336,14 +1336,14 @@ msgstr "Kon %s niet laden"
 msgid "Results:"
 msgstr "Resultaten:"
 
-#: src/curve_fitting.py:134
+#: src/curve_fitting.py:135
 #, python-brace-format
-msgid "Sum of R²: {self.r2}"
-msgstr "Som van R²: {self.r2}"
+msgid "Sum of R²: {R2}"
+msgstr "Som van R²: {R2}"
 
 #: src/curve_fitting.py:313
-msgid "Fitting parameters for {self.params.get_name()}:"
-msgstr "Parameters voor {self.params.get_name()}:"
+msgid "Fitting parameters for {param_name}"
+msgstr "Parameters voor {param_name}"
 
 #: src/export_figure.py:50
 msgid "Exported Figure"
@@ -1516,560 +1516,3 @@ msgstr "Geen manier om “{}” toe te passen"
 #: src/utilities.py:185
 msgid "No valid number specified"
 msgstr "Geen geldig nummer"
-
-#~ msgid "linear"
-#~ msgstr "Liniear"
-
-#~ msgid "logarithmic"
-#~ msgstr "Logaritmisch"
-
-#~ msgctxt "shortcut window"
-#~ msgid "Open Plot Settings"
-#~ msgstr "Open plotinstellingen"
-
-#~ msgctxt "shortcut window"
-#~ msgid "Open new File"
-#~ msgstr "Open een nieuw bestand"
-
-#~ msgid "Default Bottom Axis label"
-#~ msgstr "Standaard onderste aslabel"
-
-#~ msgid "Default Left Axis Label"
-#~ msgstr "Standaard linkeraslabel"
-
-#~ msgid "Default Top Axis Label"
-#~ msgstr "Standaard bovenste aslabel"
-
-#~ msgid "Default Right Axis Label"
-#~ msgstr "Standaard rechteraslabel"
-
-#~ msgid "Axes"
-#~ msgstr "Assen"
-
-#~ msgid "Default Bottom Axis Scale"
-#~ msgstr "Standaardschaal voor de onderste as"
-
-#~ msgid "Default Left Axis Scale"
-#~ msgstr "Standaardschaal voor de linkeras"
-
-#~ msgid "Default Top Axis Scale"
-#~ msgstr "Standaardschaal voor de bovenste as"
-
-#~ msgid "Default Right Axis Scale"
-#~ msgstr "Standaardschaal voor de rechteras"
-
-#~ msgid "left"
-#~ msgstr "Links"
-
-#~ msgid "Styling"
-#~ msgstr "Stijl"
-
-#~ msgid "Use a legend by default"
-#~ msgstr "Gebruik een legenda als standaard"
-
-#~ msgid "Custom Style by Default"
-#~ msgstr "Eigen stijl"
-
-#~ msgid "Reset to default styles"
-#~ msgstr "Herstel de standaardstijlen"
-
-#~ msgid "Mathematical Operations"
-#~ msgstr "Wiskundige operaties"
-
-#~ msgid "Translate and Multiply"
-#~ msgstr "Verplaatsen en vermenigvuldigen"
-
-#~ msgid "Add Data from Equation…"
-#~ msgstr "Voeg gegevens toe van een vergelijking…"
-
-#~ msgid ""
-#~ "Graphs lets you customize the style of plotted data. You can add and edit "
-#~ "stylesheets in detail."
-#~ msgstr ""
-#~ "Het is mogelijk met Graphs om de stijl van geplotte gegevens volledig aan "
-#~ "te passen. Je kunt gedetailleerde stijlsjablonen toevoegen en bewerken, "
-#~ "zodat je deze later weer kan gebruiken."
-
-#~ msgid "Changes:"
-#~ msgstr "Veranderingen:"
-
-#~ msgid "Imported Data"
-#~ msgstr "Geimporteerde data"
-
-#~ msgid "Are you sure you want to reset to the default styles?"
-#~ msgstr "Weet u zeker dat u de standaardstijlen wil herstellen?"
-
-#, python-brace-format
-#~ msgid "{name} (copy)"
-#~ msgstr "{name} (Kopie)"
-
-#~ msgid "Supports Numpy notation. Use a capital letter for the X coordinate."
-#~ msgstr ""
-#~ "Steunt Numpy-notatie. Gebruik een hoofdletter voor de X-coordinaten."
-
-#~ msgid "The template style used for the new style"
-#~ msgstr "De sjabloonstijl voor de nieuwe stijl"
-
-#~ msgid "New Style Name"
-#~ msgstr "Nieuwe stijlnaam"
-
-#~ msgid "Change the name of the data set and the axis positions"
-#~ msgstr "Verander de naam van de gegevensset en de asposities"
-
-#~ msgid "Change Name"
-#~ msgstr "Verander naam"
-
-#~ msgid "The position of the X-axis"
-#~ msgstr "De positie van de X-as"
-
-#~ msgid "The position of the Y-axis"
-#~ msgstr "De positie van de Y-as"
-
-#~ msgid "Line Style"
-#~ msgstr "Lijnstijl"
-
-#~ msgid "Change properties of the lines"
-#~ msgstr "Verander de lijneigenschappen"
-
-#~ msgid "The linestyle"
-#~ msgstr "De lijnstijl"
-
-#~ msgid "The width of lines"
-#~ msgstr "De breedte van de lijnen"
-
-#~ msgid "The markers that are used"
-#~ msgstr "Welke markeringen gebruikt worden"
-
-#~ msgid "The size of the markers"
-#~ msgstr "De grootte van de markeringen"
-
-#~ msgid "In which file format should the graph be exported?"
-#~ msgstr "In welk bestandsformaat moet de grafiek geexporteerd worden?"
-
-#~ msgid "Graph dpi"
-#~ msgstr "Grafiek resolutie"
-
-#~ msgid "Set the resolution of the graph in dots per inch "
-#~ msgstr "De resolutie van de grafiek in dpi (dots per inch) "
-
-#~ msgid "Export using a transparent background."
-#~ msgstr "Exporteer met een doorzichtige achtergrond."
-
-#~ msgctxt "shortcut window"
-#~ msgid "Restore View"
-#~ msgstr "Weergave herstellen"
-
-#~ msgid "The character that is used as decimal separator"
-#~ msgstr "Welk karakter gebruikt wordt als decimaalscheidingsteken"
-
-#~ msgid "Choose which column to load for the X-data"
-#~ msgstr "Kies welke kolom gebruikt wordt om X-gegevens te laden"
-
-#~ msgid "Choose which column to load for the Y-data"
-#~ msgstr "Kies welke kolom gebruikt wordt om Y-gegevens te laden"
-
-#~ msgid "Choose how many rows to skip while loading data"
-#~ msgstr ""
-#~ "Kies hoeveel rijen overgeslagen worden bij het importeren van gegevens"
-
-#~ msgid "Pick a color"
-#~ msgstr "Kies een kleur"
-
-#~ msgid "Plot Settings"
-#~ msgstr "Plotinstellingen"
-
-#~ msgid "Plot Labels"
-#~ msgstr "Grafieklabelling"
-
-#~ msgid "Settings for the plot title and labels"
-#~ msgstr "Instellingen voor de titel en labelling van de grafiek"
-
-#~ msgid "Plot Title"
-#~ msgstr "Grafiektitel"
-
-#~ msgid "Limits used on the axes"
-#~ msgstr "Grenzen gebruikt op de assen"
-
-#~ msgid "No data"
-#~ msgstr "Geen gegevens"
-
-#~ msgid "The scaling used for each axis"
-#~ msgstr "De Schaal gebruikt voor elke as"
-
-#~ msgid "Scaling on the bottom axis"
-#~ msgstr "Schaal op de onderste as"
-
-#~ msgid "Scaling used for the left-hand axis"
-#~ msgstr "Schaal voor de linkeras"
-
-#~ msgid "Scaling used for the top axis"
-#~ msgstr "Schaal voor de bovenste as"
-
-#~ msgid "Scaling used for the right-hand axis"
-#~ msgstr "Schaal voor de rechteras"
-
-#~ msgid "Use a legend for the lines"
-#~ msgstr "Gebruik een legenda"
-
-#~ msgid "The position of the legend"
-#~ msgstr "De plek van de legenda"
-
-#~ msgid "Custom Plot Style"
-#~ msgstr "Eigen plotstijl"
-
-#~ msgid "Use a custom plot style instead of following the system style"
-#~ msgstr "Gebruik een eigen plotstijl in plaats van de systeemstijl"
-
-#~ msgid "Graph Style"
-#~ msgstr "Grafiekstijl"
-
-#~ msgid "The style sheet used for the graph"
-#~ msgstr "De stijl voor de grafiek"
-
-#~ msgid "Plot Styles"
-#~ msgstr "Plotstijlen"
-
-#~ msgid "The font used in the graph"
-#~ msgstr "Welk lettertype gebruikt wordt in de grafiek"
-
-#~ msgid "The linestyle used"
-#~ msgstr "De lijnstijl"
-
-#~ msgid "Choose to have the ticks in the plot either in or out"
-#~ msgstr "Kies om de maastreepjes naar binnen of naar buiten staan"
-
-#~ msgid "Show Minor Ticks"
-#~ msgstr "Toon kleine maatstreepjes"
-
-#~ msgid "The thickness of the major ticks"
-#~ msgstr "De breedte van de grote maatstreepjes"
-
-#~ msgid "The thickness of the minor ticks"
-#~ msgstr "De breedte van de kleine maatstreepjes"
-
-#~ msgid "The length of the major ticks"
-#~ msgstr "De lengte van de grote maatstreepjes"
-
-#~ msgid "The length of the minor ticks"
-#~ msgstr "De lengte van de kleine maastreepjes"
-
-#~ msgid "Show ticks on the bottom"
-#~ msgstr "Toon maastreepjes op de onderste as"
-
-#~ msgid "Show ticks on the left-hand axis"
-#~ msgstr "Toon maatstreepjes op de linkeras"
-
-#~ msgid "Show ticks on the right"
-#~ msgstr "Toon maatstreepjes op de rechteras"
-
-#~ msgid "Show ticks on the top"
-#~ msgstr "Toon maatstreepjes op de bovenste as"
-
-#~ msgid "Settings for the grid that is used in the plots"
-#~ msgstr "Roosterinstellingen in de grafieken"
-
-#~ msgid "Show Show Grid on the Graph"
-#~ msgstr "Toon een rooster in de grafieken"
-
-#~ msgid "Width of the Lines in the Grid"
-#~ msgstr "De breedte van de lijnen in het rooster"
-
-#~ msgid "Grid Transparency"
-#~ msgstr "Roostertransparantie"
-
-#~ msgid "The Transparency of the Grid"
-#~ msgstr "Transparantie van het rooster"
-
-#~ msgid "The colors for different parts of the plot"
-#~ msgstr "De kleuren voor verschillende delen van de grafiek"
-
-#~ msgid "The color of the text in the plot"
-#~ msgstr "De kleur van verschillende delen in de grafiek"
-
-#~ msgid "The color of the ticks in the plot"
-#~ msgstr "De kleur van de maatstreepjes in de grafiek"
-
-#~ msgid "The color of the axes in the plot"
-#~ msgstr "De kleur van de assen in de plot"
-
-#~ msgid "The color of the grid in the plot"
-#~ msgstr "De kleur van het rooster in de plot"
-
-#~ msgid "The color of the plot background"
-#~ msgstr "De kleur van de achtergrond in de grafiek"
-
-#~ msgid "The color of the outline of the plot"
-#~ msgstr "De omlijningskleur van de grafiek"
-
-#~ msgid "Change the available line colors"
-#~ msgstr "Verander de beschikbare lijnkleuren"
-
-#~ msgid "The thickness of the axes"
-#~ msgstr "De breedte van de assen"
-
-#~ msgid "The colors which will be used for the lines"
-#~ msgstr "Welke kleuren gebruikt worden voor de lijnen"
-
-#~ msgid "Settings for importing graphs"
-#~ msgstr "Instellingen voor het importeren van grafieken"
-
-#~ msgid "Delimiter"
-#~ msgstr "Scheidingsteken"
-
-#~ msgid "Which column to load for the X-data"
-#~ msgstr "Kies welke kolom gebruikt wordt voor het laden van X-gegevens"
-
-#~ msgid "Which column to load for the Y-data"
-#~ msgstr "Kies welke kolom gebruikt wordt voor het laden van Y-gegevens"
-
-#~ msgid "How many rows to skip while loading data"
-#~ msgstr "Hoeveel rijen  worden overgeslagen tijdens het laden van gegevens"
-
-#~ msgid "Settings for the \"Add Equation\" option"
-#~ msgstr "Instellingen voor \"Vergelijking toevoegen\""
-
-#~ msgid "Default Equation: Y ="
-#~ msgstr "Standaardvergelijking: Y ="
-
-#~ msgid "Default X start"
-#~ msgstr "Standaard X start"
-
-#~ msgid "Default X stop"
-#~ msgstr "Standaard X stop"
-
-#~ msgid "Default Step Size"
-#~ msgstr "Standaard Stapgrootte"
-
-#~ msgid "Export Options"
-#~ msgstr "Exportinstellingen"
-
-#~ msgid "Options for exporting the graph"
-#~ msgstr "Opties voor het exporteren van de grafiek"
-
-#~ msgid "Default Filetype"
-#~ msgstr "Standaard bestandstype"
-
-#~ msgid "The default filetype of saved graphs"
-#~ msgstr "Het standaard bestandstype van opgeslagen grafieken"
-
-#~ msgid "Default dpi"
-#~ msgstr "Standaardresolutie"
-
-#~ msgid "The default resolution of saved graphs in dots per inch"
-#~ msgstr "De standaardresolutie van de opgeslagen grafieken in dots per inch"
-
-#~ msgid "Use a transparent background for the saved plots by default"
-#~ msgstr ""
-#~ "Gebruik een doorzichte achtergrond voor opgeslagen grafieken als standaard"
-
-#~ msgid "Behaviour of specific actions"
-#~ msgstr "Het gedrag van specifieke acties"
-
-#~ msgid "The behaviour of the center data button"
-#~ msgstr "Waarop de gegevens gecentreerd worden"
-
-#~ msgid "Other general settings"
-#~ msgstr "Overige algemene instellingen"
-
-#~ msgid "Clipboard length"
-#~ msgstr "Klembordlengte"
-
-#~ msgid "Choose how many states are stored in the clipboard"
-#~ msgstr "Hoeveel acties opgeslagen worden in het klembord"
-
-#~ msgid "Choose how to handle duplicate entries to be loaded"
-#~ msgstr "Hoe nieuwe gegevens met een bestaande naam gehanteerd worden"
-
-#~ msgid "Whether to hide items, that aren't selected"
-#~ msgstr "Kies of items die niet zijn geselecteerd worden verborgen"
-
-#~ msgid "Plot"
-#~ msgstr "Grafiek"
-
-#~ msgid "Set the labels and title that are used by default"
-#~ msgstr "Stel de labels en titels in die standaard worden gebruikt"
-
-#~ msgid "Axes settings"
-#~ msgstr "Asinstellingen"
-
-#~ msgid "Set the default axes scale and position used upon launch"
-#~ msgstr ""
-#~ "Stel de standaardinstellingen in voor de schaal en posities bij het "
-#~ "opstarten"
-
-#~ msgid "The scaling on the bottom axis"
-#~ msgstr "De schaal voor de onderste as"
-
-#~ msgid "The scaling on the left-hand axis"
-#~ msgstr "De schaal voor de linkeras"
-
-#~ msgid "The scaling on the top axis"
-#~ msgstr "De schaal voor de bovenste as"
-
-#~ msgid "The scaling on the right-hand axis"
-#~ msgstr "Standaardschaal voor de rechteras"
-
-#~ msgid "The default position of the Y-axis"
-#~ msgstr "De positie van de Y-as"
-
-#~ msgid "Change default plot style and other visual changes"
-#~ msgstr "Kies de standaardplotstijl en andere visuele instellingen"
-
-#~ msgid "The default position of the legend"
-#~ msgstr "De standaardpositie van de legenda"
-
-#~ msgid ""
-#~ "Use a custom plot style instead of following the system style by default"
-#~ msgstr ""
-#~ "Gebruik een eigen plotstijl als standaard in plaats van de systeemstijl"
-
-#~ msgid "The custom style sheet used by default"
-#~ msgstr "De standaardstijl voor de grafiek"
-
-#~ msgid "Override the active line styling when switching plot style"
-#~ msgstr ""
-#~ "Gebruik de lijnstijl van de nieuwe stijl wanneer een andere stijl wordt "
-#~ "gebruikt"
-
-#~ msgid "Rename"
-#~ msgstr "Hernoemen"
-
-#~ msgid ""
-#~ "The transformation tool uses Numpy notation, with capital letters for the "
-#~ "coordinates.\n"
-#~ "Transformations are done piece-wise, if you want access to the entire "
-#~ "range use X_range or Y_range. \n"
-#~ " e.g. Y = Y/max(X_range) divides each Y value by the largest value of X.\n"
-#~ "\n"
-#~ "To convert a value from degrees into radians use radians(value), e.g. Y = "
-#~ "sin(radians(X))."
-#~ msgstr ""
-#~ "Het transformatiewerktuig gebruikt Numpynotatie, met hoofdletters voor de "
-#~ "coordinaten.\n"
-#~ "De transformatie wordt punt bij punt gedaan, als je toegang wil tot de "
-#~ "hele lijst gebruik X_range of Y_range\n"
-#~ "Bijvoorbeeld Y = Y/max(X_range) deelt elk Y-coordinaat door de grootste "
-#~ "waarde in X.\n"
-#~ "\n"
-#~ "Om graden te gebruiken in plaats van radialen, gebruik dan "
-#~ "radians(waarde), bijvoorbeeld Y = sin(radians(X))"
-
-#~ msgid "Restore View / View Options"
-#~ msgstr "Weergave herstellen/weergaveinstellingen"
-
-#~ msgid ""
-#~ "Panning mode. Use left mouse button to pan, right mouse button to zoom. "
-#~ "Hold control to to keep aspect ratio fixed"
-#~ msgstr ""
-#~ "Panning-modus. Gebruik de linkermuisknop om te pannen, de rechtermuisknop "
-#~ "om te zoomen. Houd de controlknop ingedrukt om de beeldverhouding vast te "
-#~ "houden"
-
-#~ msgid "Center the data"
-#~ msgstr "Centreer de gegevens"
-
-#~ msgid "Translate X-Axis"
-#~ msgstr "Verplaats de X-as"
-
-#~ msgid "Translate Y-Axis"
-#~ msgstr "Verplaats de Y-as"
-
-#~ msgid "Multiply X-Axis"
-#~ msgstr "X-as vermenigvuldigen"
-
-#~ msgid "Multiply Y-Axis"
-#~ msgstr "Y-as vermenigvuldigen"
-
-#~ msgid "Restore View"
-#~ msgstr "Weergave herstellen"
-
-#, python-brace-format
-#~ msgid "{error}: Unable to do translation, make sure to enter a valid number"
-#~ msgstr ""
-#~ "{error}: Kan niet verplaatsen, let op dat je een geldig getal gebruikt"
-
-#~ msgid "Error setting limits, one of the values was probably infinite"
-#~ msgstr ""
-#~ "Kon geen limieten instellen, een van de waarden was waarschijnlijk "
-#~ "oneindig"
-
-#~ msgid "Could not open project"
-#~ msgstr "Kan project niet openen"
-
-#~ msgid "log"
-#~ msgstr "Logaritmisch"
-
-#~ msgid "none"
-#~ msgstr "Niets"
-
-#~ msgid "out"
-#~ msgstr "Naar buiten"
-
-#~ msgid "New configuration file created"
-#~ msgstr "Nieuw configuratiebestand aangemaakt"
-
-#~ msgid "New Import Settings file created"
-#~ msgstr "Nieuw configuratiebestand aangemaakt"
-
-#~ msgid "Rename Label"
-#~ msgstr "Hernoem label"
-
-#~ msgid "Rename Title"
-#~ msgstr "Hernoem titel"
-
-#~ msgid "Add New Style"
-#~ msgstr "Nieuwe stijl toevoegen"
-
-#~ msgctxt "shortcut window"
-#~ msgid "Open new File (Advanced)"
-#~ msgstr "Open een nieuw bestand (geavanceerd)"
-
-#~ msgid "Confirm"
-#~ msgstr "Bevestigen"
-
-#~ msgid "Add Data from File (Advanced)"
-#~ msgstr "Voeg gegevens toe van een bestand (geavanceerd)"
-
-#~ msgid "Loading configuration file"
-#~ msgstr "Configuratiebestand laden"
-
-#~ msgid "Change Label"
-#~ msgstr "Verander label"
-
-#~ msgid "Here you can change the label of the selected axis."
-#~ msgstr "Hier kunt u de label van de geselecteerde as wijzigen."
-
-#~ msgid "Change Title"
-#~ msgstr "Verander titel"
-
-#~ msgid "Here you can change the title of the plot."
-#~ msgstr "Hier kunt u de titel van de plot aanpassen"
-
-#~ msgid "Open Data From File (Advanced)"
-#~ msgstr "Open data van een bestand (geavanceerd)"
-
-#~ msgid "Name (Single File Only)"
-#~ msgstr "Naam (alleen met één bestand)"
-
-#~ msgid "Retrieve Label"
-#~ msgstr "Lees labels"
-
-#~ msgid "Try and retrieve label from the header in the dataset"
-#~ msgstr ""
-#~ "Probeer labels automatisch in te lezen met hulp van de koppen in de "
-#~ "bestanden"
-
-#~ msgid "Open Files"
-#~ msgstr "Open bestanden"
-
-#~ msgid "Retrieve label"
-#~ msgstr "Labels ophalen"
-
-#~ msgid "Intensity (s⁻¹)"
-#~ msgstr "Intensiteit (s⁻¹)"
-
-#~ msgid "Could not open data, wrong filetype"
-#~ msgstr "Kan gegevens niet openen, verkeerd bestandstype"
-
-#~ msgid "Loaded new config"
-#~ msgstr "Nieuw configuratiebestand geladen"
