--- a/po/sv.po
+++ b/po/sv.po
@@ -1335,12 +1335,12 @@ msgstr "Resultat:"
 
 #: src/curve_fitting.py:134
 #, python-brace-format
-msgid "Sum of R²: {self.r2}"
-msgstr "Summa av R²: {self.r2}"
+msgid "Sum of R²: {R2}"
+msgstr "Summa av R²: {R2}"
 
 #: src/curve_fitting.py:313
-msgid "Fitting parameters for {self.params.get_name()}:"
-msgstr "Anpassningsparametrar för {self.params.get_name()}:"
+msgid "Fitting parameters for {param_name}"
+msgstr "Anpassningsparametrar för {param_name}:"
 
 #: src/export_figure.py:50
 msgid "Exported Figure"
@@ -1507,525 +1507,8 @@ msgstr "Widget {} stöds inte"
 
 #: src/ui.py:157 src/ui.py:221 src/ui.py:251
 msgid "No way to apply “{}”"
-msgstr "Kan inte applicera \"{}\""
+msgstr "Kan inte applicera “{}”"
 
 #: src/utilities.py:185
 msgid "No valid number specified"
-msgstr "Intet giltigt nummer angivet"
-
-#~ msgid "linear"
-#~ msgstr "Linjär"
-
-#~ msgid "logarithmic"
-#~ msgstr "Logaritmisk"
-
-#~ msgctxt "shortcut window"
-#~ msgid "Open Plot Settings"
-#~ msgstr "Öppna plotinställningar"
-
-#~ msgctxt "shortcut window"
-#~ msgid "Open new File"
-#~ msgstr "Öppna ny fil"
-
-#~ msgid "Default Bottom Axis label"
-#~ msgstr "Standard nedre etikett"
-
-#~ msgid "Default Left Axis Label"
-#~ msgstr "Standard vänsteretikett"
-
-#~ msgid "Default Top Axis Label"
-#~ msgstr "Standard övre etikett"
-
-#~ msgid "Default Right Axis Label"
-#~ msgstr "Standard högeretikett"
-
-#~ msgid "Axes"
-#~ msgstr "Axlar"
-
-#~ msgid "Default Bottom Axis Scale"
-#~ msgstr "Standard nedre skalning"
-
-#~ msgid "Default Left Axis Scale"
-#~ msgstr "Standard vänsterskalning"
-
-#~ msgid "Default Top Axis Scale"
-#~ msgstr "Standard övre skalning"
-
-#~ msgid "Default Right Axis Scale"
-#~ msgstr "Standard högerskalning"
-
-#~ msgid "left"
-#~ msgstr "Vänster"
-
-#~ msgid "Styling"
-#~ msgstr "Stil"
-
-#~ msgid "Use a legend by default"
-#~ msgstr "Använd en förklaring som standard"
-
-#~ msgid "Custom Style by Default"
-#~ msgstr "Anpassad plotstil som standard"
-
-#~ msgid "Reset to default styles"
-#~ msgstr "Återställ till standardstilar"
-
-#~ msgid "Mathematical Operations"
-#~ msgstr "Matematiska operationer"
-
-#~ msgid "Translate and Multiply"
-#~ msgstr "Förskjut och multiplicera"
-
-#~ msgid "Add Data from Equation…"
-#~ msgstr "Lägg till data från ekvation…"
-
-#~ msgid ""
-#~ "Graphs lets you customize the style of plotted data. You can add and edit "
-#~ "stylesheets in detail."
-#~ msgstr ""
-#~ "Graphs låter dig anpassa stilen på de plottade data. Du kan lägga till "
-#~ "och redigera stilmallar i detalj."
-
-#~ msgid "Imported Data"
-#~ msgstr "Importerad data"
-
-#~ msgid "Are you sure you want to reset to the default styles?"
-#~ msgstr "Är du säker på att du vill återställa till standardstilarna?"
-
-#, python-brace-format
-#~ msgid "{name} (copy)"
-#~ msgstr "{name} (kopia)"
-
-#~ msgid "Supports Numpy notation. Use a capital letter for the X coordinate."
-#~ msgstr "Stödjer numpy-notation. Använd ett stort X for X-koordinaten"
-
-#~ msgid "The template style used for the new style"
-#~ msgstr "Stilmall som används för den nya stilen"
-
-#~ msgid "New Style Name"
-#~ msgstr "Ny stylnamn"
-
-#~ msgid "Change the name of the data set and the axis positions"
-#~ msgstr "Ändra namnet på datamängden och axelpositionerna"
-
-#~ msgid "Change Name"
-#~ msgstr "Byt namn"
-
-#~ msgid "The position of the X-axis"
-#~ msgstr "Positionen för X-axeln"
-
-#~ msgid "The position of the Y-axis"
-#~ msgstr "The position of the Y-axis"
-
-#~ msgid "Line Style"
-#~ msgstr "Linjestil"
-
-#~ msgid "Change properties of the lines"
-#~ msgstr "Ändra linjernas egenskaper"
-
-#~ msgid "The linestyle"
-#~ msgstr "Linjestilen"
-
-#~ msgid "The width of lines"
-#~ msgstr "Linjernas bredd"
-
-#~ msgid "The markers that are used"
-#~ msgstr "Vilka markörer som används"
-
-#~ msgid "The size of the markers"
-#~ msgstr "Markörernas storlek"
-
-#~ msgid "In which file format should the graph be exported?"
-#~ msgstr "Vilken filformat ska grafen exporteras i?"
-
-#~ msgid "Graph dpi"
-#~ msgstr "Upplösning"
-
-#~ msgid "Set the resolution of the graph in dots per inch "
-#~ msgstr "Välj grafens upplösning i dots per inch "
-
-#~ msgid "Export using a transparent background."
-#~ msgstr "Exportera grafen med en transparent bakgrund"
-
-#~ msgctxt "shortcut window"
-#~ msgid "Restore View"
-#~ msgstr "Återställ vy"
-
-#~ msgid "The character that is used as decimal separator"
-#~ msgstr "Tecknet som används som decimalavskiljare"
-
-#~ msgid "Choose which column to load for the X-data"
-#~ msgstr "Välj vilken kolumn som ska laddas för X-data"
-
-#~ msgid "Choose which column to load for the Y-data"
-#~ msgstr "Välj vilken kolumn som ska laddas för Y-data"
-
-#~ msgid "Choose how many rows to skip while loading data"
-#~ msgstr "Välj hur många rader som ska hoppas över vid inläsning av data"
-
-#~ msgid "Pick a color"
-#~ msgstr "Välj en färg"
-
-#~ msgid "Plot Settings"
-#~ msgstr "Plotinställningar"
-
-#~ msgid "Plot Labels"
-#~ msgstr "Etiketter"
-
-#~ msgid "Settings for the plot title and labels"
-#~ msgstr "Inställningar för plottitel och etiketter"
-
-#~ msgid "Plot Title"
-#~ msgstr "Plottitel"
-
-#~ msgid "Limits used on the axes"
-#~ msgstr "Gränser som används på axlarna"
-
-#~ msgid "No data"
-#~ msgstr "Ingen data"
-
-#~ msgid "The scaling used for each axis"
-#~ msgstr "Skalningen som används för varje axel"
-
-#~ msgid "Scaling on the bottom axis"
-#~ msgstr "Skalning på den nedre axeln"
-
-#~ msgid "Scaling used for the left-hand axis"
-#~ msgstr "Skalning på vänsteraxeln"
-
-#~ msgid "Scaling used for the top axis"
-#~ msgstr "Skalning på övre axeln"
-
-#~ msgid "Scaling used for the right-hand axis"
-#~ msgstr "Skalning på högeraxlen"
-
-#~ msgid "Use a legend for the lines"
-#~ msgstr "Använd en förklaring (legend) för linjerna"
-
-#~ msgid "The position of the legend"
-#~ msgstr "Vart legenden ska placeras"
-
-#~ msgid "Custom Plot Style"
-#~ msgstr "Anpassad plotstil"
-
-#~ msgid "Use a custom plot style instead of following the system style"
-#~ msgstr "Använd en anpassad plotstil istället för att följa systemstilen"
-
-#~ msgid "Graph Style"
-#~ msgstr "Diagramstil"
-
-#~ msgid "The style sheet used for the graph"
-#~ msgstr "Stilmallen som används för diagrammet"
-
-#~ msgid "Plot Styles"
-#~ msgstr "Plotstilar"
-
-#~ msgid "The font used in the graph"
-#~ msgstr "Typsnittet som används i grafen"
-
-#~ msgid "The linestyle used"
-#~ msgstr "Linjestil som används"
-
-#~ msgid "Choose to have the ticks in the plot either in or out"
-#~ msgstr "Välj om tickarna i diagrammet ska vara inåt eller utåt"
-
-#~ msgid "Show Minor Ticks"
-#~ msgstr "Visa mindre tickar"
-
-#~ msgid "The thickness of the major ticks"
-#~ msgstr "Tjockleken på stora tickar"
-
-#~ msgid "The thickness of the minor ticks"
-#~ msgstr "Tjockleken på mindre tickar"
-
-#~ msgid "The length of the major ticks"
-#~ msgstr "Längden på de stora tickarna"
-
-#~ msgid "The length of the minor ticks"
-#~ msgstr "Längden på de mindre tickarna"
-
-#~ msgid "Show ticks on the bottom"
-#~ msgstr "Visa tickar på den nedre axeln"
-
-#~ msgid "Show ticks on the left-hand axis"
-#~ msgstr "Visa tickar på vänsteraxeln"
-
-#~ msgid "Show ticks on the right"
-#~ msgstr "Visa tickar på högeraxeln"
-
-#~ msgid "Show ticks on the top"
-#~ msgstr "Visa tickar på den övre axeln"
-
-#~ msgid "Settings for the grid that is used in the plots"
-#~ msgstr "Inställningar för rutnätet som används i diagrammen"
-
-#~ msgid "Show Show Grid on the Graph"
-#~ msgstr "Visa rutnätet på grafen"
-
-#~ msgid "Width of the Lines in the Grid"
-#~ msgstr "Bredden på linjerna i rutnätet"
-
-#~ msgid "Grid Transparency"
-#~ msgstr "Rutnätets transparens"
-
-#~ msgid "The Transparency of the Grid"
-#~ msgstr "Rutnätets transparens"
-
-#~ msgid "The colors for different parts of the plot"
-#~ msgstr "Färger i olika delar i diagrammet"
-
-#~ msgid "The color of the text in the plot"
-#~ msgstr "Färgen som används för texten i grafen"
-
-#~ msgid "The color of the ticks in the plot"
-#~ msgstr "Färgen som används för tickarna i grafen"
-
-#~ msgid "The color of the axes in the plot"
-#~ msgstr "Färgen som används för axeln i grafen"
-
-#~ msgid "The color of the grid in the plot"
-#~ msgstr "Färgen som används för rutnätet"
-
-#~ msgid "The color of the plot background"
-#~ msgstr "Färgen som används för grafens bakgrund"
-
-#~ msgid "The color of the outline of the plot"
-#~ msgstr "Färgen som används för färgens konturer"
-
-#~ msgid "Change the available line colors"
-#~ msgstr "Ändrar på de olika linjefärger"
-
-#~ msgid "The thickness of the axes"
-#~ msgstr "Bredden på axeln"
-
-#~ msgid "The colors which will be used for the lines"
-#~ msgstr "Färgerna som används för linjerna"
-
-#~ msgid "Settings for importing graphs"
-#~ msgstr "Inställningar för att importera grafer"
-
-#~ msgid "Delimiter"
-#~ msgstr "Avgränsare"
-
-#~ msgid "Which column to load for the X-data"
-#~ msgstr "Välj vilken kolumn som ska laddas för X-data"
-
-#~ msgid "Which column to load for the Y-data"
-#~ msgstr "Välj vilken kolumn som ska laddas för Y-data"
-
-#~ msgid "How many rows to skip while loading data"
-#~ msgstr "Hur många rader som ska hoppas över"
-
-#~ msgid "Settings for the \"Add Equation\" option"
-#~ msgstr "Inställningar för \"Lägg till ekvation\"-knappen"
-
-#~ msgid "Default Equation: Y ="
-#~ msgstr "Standardekvation: Y ="
-
-#~ msgid "Default X start"
-#~ msgstr "Standard X-start"
-
-#~ msgid "Default X stop"
-#~ msgstr "Standard X-stop"
-
-#~ msgid "Default Step Size"
-#~ msgstr "Standard stegstorlek"
-
-#~ msgid "Export Options"
-#~ msgstr "Exportinställningar"
-
-#~ msgid "Options for exporting the graph"
-#~ msgstr "Inställningarna för att exportera grafen"
-
-#~ msgid "Default Filetype"
-#~ msgstr "Standard filtyp"
-
-#~ msgid "The default filetype of saved graphs"
-#~ msgstr "Standardfiltypen för sparade grafer"
-
-#~ msgid "Default dpi"
-#~ msgstr "Standardupplösning"
-
-#~ msgid "The default resolution of saved graphs in dots per inch"
-#~ msgstr "Standardupplösning för sparade grafer i dots per inch"
-
-#~ msgid "Use a transparent background for the saved plots by default"
-#~ msgstr "Använd en transparent bakgrund för sparade grafer som standard"
-
-#~ msgid "Behaviour of specific actions"
-#~ msgstr "Standardbeteende av specifika åtgärder"
-
-#~ msgid "The behaviour of the center data button"
-#~ msgstr "Beteendet av \"Centerera data\" knappen"
-
-#~ msgid "Other general settings"
-#~ msgstr "Andra allmänna inställningar"
-
-#~ msgid "Clipboard length"
-#~ msgstr "Urklippets längd"
-
-#~ msgid "Choose how many states are stored in the clipboard"
-#~ msgstr "Välj hur många tillständ som ska lagras i urklippet"
-
-#~ msgid "Choose how to handle duplicate entries to be loaded"
-#~ msgstr "Välj hur man hanterar dubbletter som ska laddas"
-
-#~ msgid "Whether to hide items, that aren't selected"
-#~ msgstr "Välj om omarkerade data ska döljas"
-
-#~ msgid "Plot"
-#~ msgstr "Plot"
-
-#~ msgid "Set the labels and title that are used by default"
-#~ msgstr "Ange etiketter och titel som används som standard"
-
-#~ msgid "Axes settings"
-#~ msgstr "Axelinställningar"
-
-#~ msgid "Set the default axes scale and position used upon launch"
-#~ msgstr "Standardinställningar för axelns skalning och position vid start"
-
-#~ msgid "The scaling on the bottom axis"
-#~ msgstr "Standardskalningen på den nedre axeln"
-
-#~ msgid "The scaling on the left-hand axis"
-#~ msgstr "Standardskalningen på den vänster axlen"
-
-#~ msgid "The scaling on the top axis"
-#~ msgstr "Standardskalningen på den övre axeln"
-
-#~ msgid "The scaling on the right-hand axis"
-#~ msgstr "Standardskalningen på högeraxeln"
-
-#~ msgid "The default position of the Y-axis"
-#~ msgstr "Vilken position Y-axeln ska ha vid start"
-
-#~ msgid "Change default plot style and other visual changes"
-#~ msgstr "Ändra standard plotstil och andra visuella ändringar"
-
-#~ msgid "The default position of the legend"
-#~ msgstr "Standardpositionen för förklaringen"
-
-#~ msgid ""
-#~ "Use a custom plot style instead of following the system style by default"
-#~ msgstr ""
-#~ "Använd en anpassad plotstil istället för att följa systemstilen som "
-#~ "standard"
-
-#~ msgid "The custom style sheet used by default"
-#~ msgstr "Den anpassade stilmall som används som standard"
-
-#~ msgid "Override the active line styling when switching plot style"
-#~ msgstr "Ändra den aktiva linjestilen när du byter plotstil"
-
-#~ msgid "Rename"
-#~ msgstr "Bytt namn"
-
-#~ msgid ""
-#~ "The transformation tool uses Numpy notation, with capital letters for the "
-#~ "coordinates.\n"
-#~ "Transformations are done piece-wise, if you want access to the entire "
-#~ "range use X_range or Y_range. \n"
-#~ " e.g. Y = Y/max(X_range) divides each Y value by the largest value of X.\n"
-#~ "\n"
-#~ "To convert a value from degrees into radians use radians(value), e.g. Y = "
-#~ "sin(radians(X))."
-#~ msgstr ""
-#~ "Transformationsverktyget använder Numpy-notation, med versaler för "
-#~ "koordinaterna.\n"
-#~ "Transformationer görs bitvis, om du vill ha tillgång till hela "
-#~ "datamängden använd X_range eller Y_range.\n"
-#~ "  t.ex. Y = Y/max(X_range) dividerar varje Y-värde med det största värdet "
-#~ "av X.\n"
-#~ "\n"
-#~ "För att omvandla ett värde från grader till radianer använd "
-#~ "radianer(värde), t.ex. Y = sin(radianer(X))."
-
-#~ msgid "Restore View / View Options"
-#~ msgstr "Restore View / View Options"
-
-#~ msgid ""
-#~ "Panning mode. Use left mouse button to pan, right mouse button to zoom. "
-#~ "Hold control to to keep aspect ratio fixed"
-#~ msgstr ""
-#~ "Panoreringsläge. Använd vänster musknapp för att panorera, höger musknapp "
-#~ "för att zooma. Håll ned kontrollknappen för att behålla den fasta "
-#~ "aspektförhållandet."
-
-#~ msgid "Center the data"
-#~ msgstr "Centrera datan"
-
-#~ msgid "Translate X-Axis"
-#~ msgstr "Förskjut X-axeln"
-
-#~ msgid "Translate Y-Axis"
-#~ msgstr "Förskjut Y-axeln"
-
-#~ msgid "Multiply X-Axis"
-#~ msgstr "Multiplicera X-axeln"
-
-#~ msgid "Multiply Y-Axis"
-#~ msgstr "Multiplicera Y-axeln"
-
-#~ msgid "Restore View"
-#~ msgstr "Återställ vy"
-
-#, python-brace-format
-#~ msgid "{error}: Unable to do translation, make sure to enter a valid number"
-#~ msgstr ""
-#~ "{error}: Det går inte att utföra översättning, se till att ange en giltig "
-#~ "siffra"
-
-#~ msgid "Error setting limits, one of the values was probably infinite"
-#~ msgstr "Kunde inte sätta gränserna, ett av värdena var förmodligen oändligt"
-
-#~ msgid "Could not open project"
-#~ msgstr "Kunda inte öppna projektet"
-
-#~ msgid "log"
-#~ msgstr "Log"
-
-#~ msgid "none"
-#~ msgstr "Ingen"
-
-#~ msgid "out"
-#~ msgstr "Ut"
-
-#~ msgid "New configuration file created"
-#~ msgstr "Ny konfigurationsfil skapad"
-
-#~ msgid "New Import Settings file created"
-#~ msgstr "Ny importinställningsfil skapad"
-
-#~ msgid "Rename Label"
-#~ msgstr "Byt namn på etiketten"
-
-#~ msgid "Rename Title"
-#~ msgstr "Byt namn på titeln"
-
-#~ msgid "Add New Style"
-#~ msgstr "Lägg till ny stil"
-
-#~ msgctxt "shortcut window"
-#~ msgid "Open new File (Advanced)"
-#~ msgstr "Öppna ny fil (avencerad)"
-
-#~ msgid "Confirm"
-#~ msgstr "Bekräfta"
-
-#~ msgid "Add Data from File (Advanced)"
-#~ msgstr "Lägg till data från fil (avancerad)"
-
-#~ msgid "Loading configuration file"
-#~ msgstr "Läser in konfigurationsfilen"
-
-#~ msgid "Change Label"
-#~ msgstr "Ändra etiketten"
-
-#~ msgid "Here you can change the label of the selected axis."
-#~ msgstr "Här kan du ändra etiketten för den markerade axeln."
-
-#~ msgid "Change Title"
-#~ msgstr "Ändra titeln"
-
-#~ msgid "Here you can change the title of the plot."
-#~ msgstr "Här kan du ändra titeln på diagrammet"
+msgstr "Inget giltigt nummer angivet"
